upgraded httpcomponents to 4.1.2 use injected httpclient, instead of new initialization added docs and out folder to .gitignore

--- a/build.xml
+++ b/build.xml
@@ -8,6 +8,7 @@
 
 	<property file="build.properties" />
 	<property environment="env" />
+	<property name="env.TEMP" value="out" />
 	<property name="buildtemp" value="${env.TEMP}/platformsdkbuild" />
 
 	<property name="classes" value="${buildtemp}/classes" />
